--- a/client/pages/home/home.wxss
+++ b/client/pages/home/home.wxss
@@ -1,110 +1,155 @@
 /* pages/home/home.wxss */
 
-
-
 .container-home {
-  height: 100%;
-  box-sizing: border-box;
+    height: 100%;
+    box-sizing: border-box;
+    flex-direction: column;
+    display: flex;
+    
 }
 
 .header {
-  width: 100%;
-  height: 5%;
-  background: #ccf;
-  text-align: center;
+    width: 100%;
+    height: 5%;
+    background: #ccf;
+    text-align: center;
 }
 
 .swiper {
-  width: 100%;
-  height: 25%;
-  text-align: center;
-  border-bottom: solid 1px #eee;
-  /* background: #0cc; */
+    width: 100%;
+    height: 240rpx;
+    text-align: center;
+    border-bottom: solid 1px #eee;
+    /* background: #0cc; */
+}
+
+.searchBar {
+    width: 100%;
+    height: 80rpx;
+    background: #ccf;
+    border-bottom: solid 1px #ccc;
+    display: inline-block
+}
+
+.searchBar>view {
+    margin: 8rpx auto;
+    border: solid 2px #999;
+    width: 98%;
+    height: 80%;
+    border-radius: 40rpx;
+    background: #fff;
+    position: relative;
+    overflow: hidden;
+    box-sizing: border-box;
+    box-shadow: 1rpx 1rpx 5rpx #666
+}
+
+.searchBar text {
+    float: left;
+    margin-left:15rpx;
+    color: #999;
+    line-height: 190%;
+}
+
+.searchBar>view view {
+    float: right;
+    width: 100rpx;
+    height: 115%;
+    text-align: center
+}
+
+.searchBar>view view i {
+    font-family: 'iconfont';
+    font-size: 36rpx;
+    color: #999;
+    line-height: 55rpx;
 }
 
 .mainWrapper {
-  width: 100%;
-  height: 75%;
-  display: flex;
-  /*flex-direction: column;主轴方向从左至右*/
-  align-items: flex-start; /*交叉轴靠上对齐*/
-  justify-content: space-between; /*主轴分散均匀对齐*/
+    width: 100%;
+    flex: 1;
+    display: flex;
+    /*flex-direction: column;主轴方向从左至右*/
+    align-items: flex-start;
+    /*交叉轴靠上对齐*/
+    justify-content: space-between;
+    /*主轴分散均匀对齐*/
 }
 
 .swiper swiper {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .swiperTitle {
-  height: 40rpx;
-  line-height: 40rpx;
-  background: rgba(0, 0, 0, 0.3);
-  color: #fff;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  font-size: 24rpx;
-  text-shadow: 1rpx 1rpx 2rpx #333;
+    height: 40rpx;
+    line-height: 40rpx;
+    background: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    font-size: 24rpx;
+    text-shadow: 1rpx 1rpx 2rpx #333;
 }
 
 .swiper swiper image {
-  height: 100%;
-  width: 100%;
-  float: left;
+    height: 100%;
+    width: 100%;
+    float: left;
 }
+
 
 /*菜单区域*/
 
 .sideBar {
-  flex: 1;
-  height: 105%;
-  /* border-right: solid 1px #eee; */
-  box-shadow: 5rpx 0 10rpx #c0c0c0;
-  /* background: #66c; */
+    flex: 1;
+    height: 100%;
+    /* border-right: solid 1px #eee; */
+    box-shadow: 5rpx 0 10rpx #c0c0c0;
+    /* background: #66c; */
 }
 
 .menuItem {
-  height: 120rpx;
-  line-height: 130rpx;
-  text-align: center;
-  border-bottom: solid 1px #c0c0c0;
-  font-size: 26rpx;
-  border-radius: 0 0 20rpx 0;
-  position: relative;
-  color: #ff5983;
-  -webkit-transition: all 0.2s ease-out;
+    height: 120rpx;
+    line-height: 130rpx;
+    text-align: center;
+    border-bottom: solid 1px #c0c0c0;
+    font-size: 26rpx;
+    border-radius: 0 0 20rpx 0;
+    position: relative;
+    color: #ff5983;
+    -webkit-transition: all 0.2s ease-out;
 }
 
 .menuItem:active {
-  /* background: #f1aaa6 */
-  background: #eee;
+    /* background: #f1aaa6 */
+    background: #eee;
 }
 
 .menuItem.active {
-  font-weight: bold;
-  height: 180rpx;
-  line-height: 180rpx;
-  color: #7a023c;
-  box-shadow: 0 5rpx 10rpx #c0c0c0;
-  /* background: #efcee8; */
+    font-weight: bold;
+    height: 150rpx;
+    line-height: 180rpx;
+    color: #7a023c;
+    box-shadow: 0 5rpx 10rpx #c0c0c0;
+    /* background: #efcee8; */
 }
 
-
-
 .menuItem.active i {
-  -webkit-animation: swing 0.3s ease-out 0.3s;
+    -webkit-animation: swing 0.3s ease-out 0.3s;
 }
 
 .menuItem i {
-  font-family: 'iconfont';
-  font-size: 44rpx;
-  margin-right: 10rpx;
-  display: inline-block;
-  color: #ff5983;
-  line-height: 20rpx;
+    font-family: 'iconfont';
+    font-size: 44rpx;
+    margin-right: 10rpx;
+    display: inline-block;
+    color: #ff5983;
+    line-height: 20rpx;
 }
+
 
 /* .menuItem text:after{
   font-family: 'iconfont';
@@ -112,94 +157,163 @@
   content: '\e639;'
 } */
 
+
 /*右边主区域*/
 
 .mainListWrapper {
-  flex: 3;
-  height: 100%;
-  /* background: #cc0 */
+    flex: 3;
+    height: 100%;
+    /* background: #cc0 */
 }
 
 .goodsItem {
-  margin: 20rpx;
-  padding-bottom: 10rpx;
-  border-bottom: dashed 1px #eee;
-  -webkit-transform: translate3d(0, 10%, 0) scale(.85,.85);
-  opacity:0;
-  -webkit-animation: intoAffect 0.3s ease-out forwards;
-  
+    margin: 20rpx;
+    padding-bottom: 10rpx;
+    border-bottom: dashed 1px #eee;
+    -webkit-transform: translate3d(0, 10%, 0) scale(.85, .85);
+    opacity: 0;
+    -webkit-animation: intoAffect 0.3s ease-out forwards;
 }
 
 .goodsItem .imageWapper {
-  text-align: center;
+    text-align: center;
 }
 
 .goodsItem .imageWapper image {
-  width: 80%;
+    width: 80%;
+    height: 400rpx
 }
 
 .goodsItem .goodTitle {
-  color: #333;
-  margin: 5rpx 0;
-  font-size: 26rpx;
+    color: #333;
+    margin: 5rpx 0;
+    font-size: 26rpx;
 }
 
 .goodsItem .goodTitle i {
-  font-family: 'iconfont';
-  margin-right: 10rpx;
-  font-size: 40rpx;
-  color: #ff5983;
+    font-family: 'iconfont';
+    margin-right: 10rpx;
+    font-size: 40rpx;
+    color: #ff5983;
 }
 
 .goodsItem .goodsPrice {
-  line-height: 70rpx;
+    line-height: 70rpx;
 }
 
 .goodsItem .goodsPrice text:first-child {
-  color: red;
-  font-weight: bold;
-  font-size: 40rpx;
+    color: red;
+    font-weight: bold;
+    font-size: 40rpx;
 }
 
 .goodsItem .goodsPrice text:last-child {
-  color: #666;
-  font-size: 30rpx;
-  margin-left: 30rpx;
+    color: #666;
+    font-size: 30rpx;
+    margin-left: 30rpx;
 }
 
 .goodsItem .goodsRemark {
-  color: #999;
-  font-size: 24rpx;
+    color: #999;
+    font-size: 24rpx;
 }
 
 .goodsItem .goodsRemark i {
-  font-family: 'iconfont';
-  font-size: 40rpx;
-  margin-right: 10rpx;
+    font-family: 'iconfont';
+    font-size: 40rpx;
+    margin-right: 10rpx;
+}
+
+.footer {
+    width: 100%;
+    height: 100rpx;
+    
+    border-top: solid 1px #ccc;
+    display: flex;
+    color: #fff;
+    /* perspective: 800rpx;
+    transform-style: preserve-3d; */
+}
+
+.footer>view {
+    width: 100%;
+    text-align: center;
+    flex: 1;
+    background: #9B1888;
+    
+}
+
+.footer>view.active {
+    background: #6F2586;
+    /*-webkit-transition: all .3s ease-out;
+     -webkit-transform: rotateX(180deg) */
+}
+
+.footer>view.active view {
+    /* margin-top: 18rpx; */
+    -webkit-transform:translate3d(0,20rpx,0);
+}
+
+.footer>view text {
+  -webkit-transition: all .2s ease-out;
+    opacity: 1;
+    font-size: 28rpx;
+    line-height: 45rpx
+}
+
+.footer>view i {
+    
+}
+
+.footer>view.active text {
+    opacity: 0
+}
+
+.footer>view.active i {
+    font-size: 60rpx;
+    -webkit-transition: all .1s linear;
+}
+
+.footer>view view {
+  -webkit-transform:translate3d(0,6rpx,0);
+    -webkit-transition: all 0.2s linear;
+}
+
+.footer i {
+    font-family: 'iconfont';
+    font-size: 40rpx;
 }
 
 
 /*动画区*/
+
 @-webkit-keyframes swing {
-  25% {
-    -webkit-transform: rotate(20deg);
-  }
-
-  50% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  75% {
-    -webkit-transform: rotate(-20deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(0deg);
-  }
+    25% {
+        -webkit-transform: rotate(20deg);
+    }
+    50% {
+        -webkit-transform: rotate(0deg);
+    }
+    75% {
+        -webkit-transform: rotate(-20deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+    }
 }
+
 @-webkit-keyframes intoAffect {
-  100% {
-    -webkit-transform: translate3d(0, 0, 0) scale(1,1);
-    opacity: 1
-  }
+    100% {
+        -webkit-transform: translate3d(0, 0, 0) scale(1, 1);
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes activeAffect {
+    50% {
+        -webkit-transform: scale(0, 1);
+    }
+    100% {
+        -webkit-transform: scale(0, 1);
+    }
 }
