--- a/client/pages/home/home.wxml
+++ b/client/pages/home/home.wxml
@@ -1,64 +1,77 @@
-<view class='container-home'>
-  <view class='swiper'>
-    <swiper autoplay="{{sliderSet.autoplay}}" circular="{{sliderSet.circular}}">
-      <block wx:for="{{imgUrls}}" wx:key="{{index}}">
-        <swiper-item>
-          <image src="{{item.url}}" class="slide-image" bindtap='bindViewTap' />
-          <view class='swiperTitle'>{{item.title}}</view>
-        </swiper-item>
-      </block>
-    </swiper>
+
+
+<view class='container'>
+  <view class="container-main {{activeTab!=='home'&&'hide'}}">
+      <view class='container-home'>
+          <view class='swiper'>
+            <swiper autoplay="{{sliderSet.autoplay}}" circular="{{sliderSet.circular}}">
+              <block wx:for="{{imgUrls}}" wx:key="{{index}}">
+                <swiper-item>
+                  <image src="{{item.url}}" class="slide-image" bindtap='bindViewTap' />
+                  <view class='swiperTitle'>{{item.title}}</view>
+                </swiper-item>
+              </block>
+            </swiper>
+          </view>
+          <!-- <view class='header'>
+            <text>{{showMenu.name}}</text>
+          </view> -->
+          <view class="searchBar">
+            <view bindtap='goSearch'>
+              <text>发现更多...</text>
+              <view>
+                <i class='icon-search'></i>
+              </view>
+            </view>
+          </view>
+          <view class='mainWrapper'>
+            <scroll-view class='sideBar' scroll-y>
+              <view class='menuItem {{item.isActive?"active":""}}' wx:for="{{menuList}}" wx:key="index" data-id="{{item.menuId}}" bindtap="chooseMenu">
+                <template is="menuItem" data="{{...item}}" />
+              </view>
+            </scroll-view>
+            <scroll-view scroll-y enable-back-to-top class='mainListWrapper'>
+              <view class="goodsItem" wx:for="{{showGoodList}}" wx:key="id">
+                <template is="goodsItem" data="{{...item}}" />
+              </view>
+            </scroll-view>
+          </view>
+        </view>
   </view>
-  <!-- <view class='header'>
-    <text>{{showMenu.name}}</text>
-  </view> -->
-  <view class="searchBar">
-    <view>
-      <text>发现更多...</text>
-      <view>
-        <i class='icon-search'></i>
-      </view>
-    </view>
-  </view>
-  <view class='mainWrapper'>
-    <scroll-view class='sideBar' scroll-y>
-      <view class='menuItem {{item.isActive?"active":""}}' wx:for="{{menuList}}" wx:key="index" data-id="{{item.menuId}}" bindtap="chooseMenu">
-        <template is="menuItem" data="{{...item}}" />
-      </view>
-    </scroll-view>
-    <scroll-view scroll-y enable-back-to-top class='mainListWrapper'>
-      <view class="goodsItem" wx:for="{{showGoodList}}" wx:key="id">
-        <template is="goodsItem" data="{{...item}}" />
-      </view>
-    </scroll-view>
-  </view>
+  <include src="../messager/messager.wxml" />
+  <include src="../search/search.wxml" />
   <view class="footer">
-    <view data-key='home' class="{{activeTab=='home'&&'active'}}" catchtap='footerChange'>
-      <view>
-        <i class="icon-home1"></i>
+      <view data-key='home' class="{{activeTab=='home'&&'active'}}" catchtap='footerChange'>
+        <view>
+          <i class="icon-home1"></i>
+        </view>
+        <text>首页</text>
       </view>
-      <text>首页</text>
-    </view>
-    <view data-key='message' class="{{activeTab==='message'?'active':''}}" catchtap='footerChange'>
-      <view>
-        <i class="icon-message"></i>
+      <view data-key='messager' class="{{activeTab==='messager'&&'active'}}" catchtap='footerChange'>
+        <view>
+          <i class="icon-message"></i>
+        </view>
+        <text>留言墙</text>
       </view>
-      <text>留言墙</text>
-    </view>
-    <view data-key='like' class="{{activeTab==='like'?'active':''}}" catchtap='footerChange'>
-      <view>
-        <i class="icon-star"></i>
+      <view data-key='like' class="{{activeTab==='like'&&'active'}}" catchtap='footerChange'>
+        <view>
+          <i class="icon-star"></i>
+        </view>
+        <text>收藏</text>
       </view>
-      <text>收藏</text>
-    </view>
-    <view data-key='about' class="{{activeTab==='about'?'active':''}}" catchtap='footerChange'>
-      <view>
-        <i class="icon-about"></i>
+      <view data-key='about' class="{{activeTab==='about'&&'active'}}" catchtap='footerChange'>
+        <view>
+          <i class="icon-about"></i>
+        </view>
+        <text>关于</text>
       </view>
-      <text>关于</text>
     </view>
-  </view>
 </view>
+
+
+
+
+
 
 <template name="menuItem">
   <i style="{{iconColor?'color:#'+iconColor:''}}" class="icon-{{icon}}"></i>
