--- a/client/pages/messager/messager.wxss
+++ b/client/pages/messager/messager.wxss
@@ -3,16 +3,53 @@ page {
     transform-style: preserve-3d;
 }
 
-.messageContainer {
+.messageContainer {}
+
+.addMsgWrapper {
+    position: absolute;
+    z-index: 10;
+    bottom: 160rpx;
+    left: 50rpx;
+    height: 80rpx;
+    min-width: 80rpx;
+    border: solid 1px #999;
+    border-radius: 40rpx;
+    text-align: center;
     background: #eee;
-    position: fixed;
-    z-index: 20;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-transform: translate3d(0, 100%, 0) rotateY(90deg);
-    -webkit-transform-origin:100% 0%;
-    -webkit-transition: all .4s ease-out;
-    display: none
+    box-shadow: 2rpx 2rpx 2rpx #666;
+    overflow: hidden
+}
+
+
+.addMsgWrapper i {
+    font-family: "iconfont";
+    font-size: 50rpx;
+    line-height: 80rpx;
+    vertical-align: middle;
+    padding: 0 15rpx;
+    float: left;
+}
+.addMsgWrapper i:active{
+    font-weight: bold
+}
+
+.addMsgWrapper view{
+    display: inline-block;
+    width: 0rpx;
+    overflow:hidden;
+    vertical-align: middle;
+    -webkit-transition: all .2s ease-out;
+}
+.addMsgWrapper view.active{
+    width: 480rpx;
+}
+.addMsgWrapper input{
+    vertical-align: middle;
+    height: 80rpx;
+    float: left;
+    border-left: solid 1px #999;
+    border-right: solid 1px #999;
+    background: #fff;
+    text-align: left;
+    width: 380rpx
 }
