--- a/client/pages/messager/messager.wxml
+++ b/client/pages/messager/messager.wxml
@@ -6,4 +6,22 @@
             <i class="icon-shortcut"></i>
         </view>
     </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
+    <view class='msgItemWrap'>
+      <text>这是一个留言</text>
+    </view>
 </view>
