--- a/client/pages/messager/messager.wxss
+++ b/client/pages/messager/messager.wxss
@@ -1,76 +1,106 @@
 page {
-  perspective: 800rpx;
-  transform-style: preserve-3d;
+    perspective: 800rpx;
+    transform-style: preserve-3d;
 }
 
 .messageContainer {
+    background: url('https://xiu-store-1255815795.cos.ap-chengdu.myqcloud.com/images/material/wall2.jpg');
 }
 
 .addMsgWrapper {
-  position: absolute;
-  z-index: 10;
-  bottom: 160rpx;
-  left: 50rpx;
-  height: 80rpx;
-  min-width: 80rpx;
-  border: solid 1px #999;
-  border-radius: 40rpx;
-  text-align: center;
-  background: #eee;
-  box-shadow: 2rpx 2rpx 2rpx #666;
-  overflow: hidden;
+    position: absolute;
+    z-index: 10;
+    bottom: 160rpx;
+    left: 50rpx;
+    height: 80rpx;
+    min-width: 80rpx;
+    border: solid 1px #999;
+    border-radius: 40rpx;
+    text-align: center;
+    background: #eee;
+    box-shadow: 2rpx 2rpx 2rpx #666;
+    overflow: hidden;
 }
 
 .addMsgWrapper i {
-  font-family: "iconfont";
-  font-size: 50rpx;
-  line-height: 80rpx;
-  vertical-align: middle;
-  padding: 0 15rpx;
-  float: left;
+    font-family: "iconfont";
+    font-size: 50rpx;
+    line-height: 80rpx;
+    vertical-align: middle;
+    padding: 0 15rpx;
+    float: left;
 }
 
 .addMsgWrapper i:active {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .addMsgWrapper view {
-  display: inline-block;
-  width: 0rpx;
-  overflow: hidden;
-  vertical-align: middle;
-  -webkit-transition: all 0.2s ease-out;
+    display: inline-block;
+    width: 0rpx;
+    overflow: hidden;
+    vertical-align: middle;
+    -webkit-transition: all 0.2s ease-out;
 }
 
 .addMsgWrapper view.active {
-  width: 480rpx;
+    width: 480rpx;
 }
 
 .addMsgWrapper input {
-  vertical-align: middle;
-  height: 80rpx;
-  float: left;
-  border-left: solid 1px #999;
-  border-right: solid 1px #999;
-  background: #fff;
-  text-align: left;
-  width: 380rpx;
+    vertical-align: middle;
+    height: 80rpx;
+    float: left;
+    border-left: solid 1px #999;
+    border-right: solid 1px #999;
+    background: #fff;
+    text-align: left;
+    width: 380rpx;
 }
 
 .msgItemWrap {
-  float: left;
-  width: 25%;
-  height: 200rpx;
-  border: solid 1px #ccc;
-  box-sizing: border-box;
-  text-align: center
+    float: left;
+    width: 20%;
+    height: 200rpx;
+    box-sizing: border-box;
+    text-align: center
 }
-.msgItemWrap text{
-width: 90%;
-height: 90%;
-background: #FAFEC0;
-display: block;
-margin: 0 auto;
-box-shadow: 2rpx 2rpx 10rpx #333;
--webkit-mask: -webkit-gradient(linear, top bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+
+.msgItemWrap text {
+    display: block;
+    width: 100rpx;
+    height: 65%;
+    margin-top: 20rpx;
+    padding: 30rpx 20rpx 10rpx 20rpx;
+    background: linear-gradient(-150deg, transparent 20rpx, rgb(211, 248, 3) 0);
+    position: relative;
+    box-shadow: -5rpx 5rpx 8rpx #999;
+    -webkit-transform-origin: 0 0;
+    margin: 20rpx auto;
+    font-size: 24rpx;
+}
+
+.msgItemWrap text:before {
+    content: '';
+    position: absolute;
+    top: -25rpx;
+    right: 50%;
+    width: 30rpx;
+    height: 50rpx;
+    background: rgba(28, 120, 240,.5);
+    transform: rotate(10deg);
+}
+
+.msgItemWrap text:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: linear-gradient(to left bottom, transparent 50%, rgba(0, 0, 0, .2) 0, rgba(0, 0, 0, .4)) 100% 0 no-repeat;
+    width: 20rpx;
+    height: 45rpx;
+    transform: translate(2rpx, -20rpx) rotate(-37deg);
+    transform-origin: bottom right;
+    border-bottom-left-radius: inherit;
+    box-shadow: -.2em .2em .3em -.1em rgba(0, 0, 0, .2);
 }
