完成用户登录和消息页的开发

--- a/client/pages/messager/messager.wxml
+++ b/client/pages/messager/messager.wxml
@@ -2,15 +2,18 @@
   <view class='addMsgWrapper'>
     <i class="icon-addmessage" data-order='show' bindtap='messageHandler'></i>
     <view class="{{addMsgHide&&'active'}}">
-      <input maxlength='30' type="text" placeholder="在此输入新留言" data-order='input' bindinput='messageHandler' />
-      <i class="icon-niming {{!newMessage.isHideName?'':'disable'}}" data-order='hidename' bindtap='messageHandler'></i>
+      <input maxlength='30' type="text" value="{{newMessage.content}}" placeholder="在此输入新留言" data-order='input' bindinput='messageHandler' />
+      <i class="icon-niming1 {{newMessage.isHideName?'':'disable'}}" data-order='hidename' bindtap='messageHandler'></i>
       <i class="icon-shortcut" data-order='send' bindtap='messageHandler'></i>
     </view>
   </view>
   <scroll-view scroll-y lower-threshold='10' bindscrolltolower="renderMesList">
     <view class='msgListWrap'>
       <view wx:for="{{messageList}}" wx:key="{{item.index}}" class='msgItemWrap'>
-        <text style="-webkit-transform: translate3d({{item.skew[0]}}px, {{item.skew[1]}}px,0) rotate({{item.skew[2]}}deg)">{{item.content}}</text>
+        <view style="-webkit-transform: translate3d({{item.skew[0]}}px, {{item.skew[1]}}px,0) rotate({{item.skew[2]}}deg)" class="msgItemOuter color{{item.skew[3]}}">
+            <view><image src="{{item.hideName ? './user-unlogin.png' : item.avatarUrl}}"></image></view>
+            <text>{{item.content}}</text>
+        </view>
       </view>
     </view>
 
