--- a/client/pages/messager/messager.wxss
+++ b/client/pages/messager/messager.wxss
@@ -1,121 +1,164 @@
 page {
-  perspective: 800rpx;
-  transform-style: preserve-3d;
+    perspective: 800rpx;
+    transform-style: preserve-3d;
 }
 
 .messageContainer {
+    width: 100%;
 }
 
 .messageContainer scroll-view {
-  height: 100%;
+    height: 100%;
 }
 
-.msgListWrap{
-  float: left;
-  min-height: 150%;
-  width: 100%;
-  background: url('https://xiu-store-1255815795.cos.ap-chengdu.myqcloud.com/images/material/wall2.jpg');
+.msgListWrap {
+    float: left;
+    min-height: 150%;
+    width: 90%;
+    padding: 5%;
+    background: url('https://xiu-store-1255815795.cos.ap-chengdu.myqcloud.com/images/material/wall2.jpg');
 }
 
 .addMsgWrapper {
-  position: absolute;
-  z-index: 10;
-  bottom: 160rpx;
-  left: 50rpx;
-  height: 80rpx;
-  min-width: 80rpx;
-  border: solid 1px #999;
-  border-radius: 40rpx;
-  text-align: center;
-  background: #eee;
-  box-shadow: 2rpx 2rpx 2rpx #666;
-  overflow: hidden;
+    position: absolute;
+    z-index: 10;
+    bottom: 160rpx;
+    left: 50rpx;
+    height: 80rpx;
+    min-width: 80rpx;
+    border: solid 1px #999;
+    border-radius: 40rpx;
+    text-align: center;
+    background: #eee;
+    box-shadow: 2rpx 2rpx 2rpx #666;
+    overflow: hidden;
 }
 
 .addMsgWrapper i {
-  font-family: "iconfont";
-  font-size: 50rpx;
-  line-height: 80rpx;
-  vertical-align: middle;
-  padding: 0 15rpx;
-  float: left;
+    font-family: "iconfont";
+    font-size: 50rpx;
+    line-height: 80rpx;
+    vertical-align: middle;
+    padding: 0 15rpx;
+    float: left;
 }
 
 .addMsgWrapper i:active {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .addMsgWrapper i.disable {
-  color: #ccc;
+    color: #ccc;
 }
 
 .addMsgWrapper view {
-  display: inline-block;
-  width: 0rpx;
-  overflow: hidden;
-  vertical-align: middle;
-  -webkit-transition: all 0.2s ease-out;
+    display: inline-block;
+    width: 0rpx;
+    overflow: hidden;
+    vertical-align: middle;
+    -webkit-transition: all 0.2s ease-out;
 }
 
 .addMsgWrapper view.active {
-  width: 550rpx;
+    width: 550rpx;
 }
 
 .addMsgWrapper input {
-  vertical-align: middle;
-  height: 80rpx;
-  float: left;
-  border-left: solid 1px #999;
-  border-right: solid 1px #999;
-  background: #fff;
-  text-align: left;
-  width: 380rpx;
+    vertical-align: middle;
+    height: 80rpx;
+    float: left;
+    border-left: solid 1px #999;
+    border-right: solid 1px #999;
+    background: #fff;
+    text-align: left;
+    width: 380rpx;
 }
 
 .msgItemWrap {
-  float: left;
-  width: 20%;
-  height: 320rpx;
-  box-sizing: border-box;
-  text-align: center;
+    float: left;
+    width: 20%;
+    height: 200rpx;
+    box-sizing: border-box;
+    text-align: center;
 }
 
-.msgItemWrap text {
-  display: block;
-  width: 100rpx;
-  height: auto;
-  margin-top: 20rpx;
-  padding: 30rpx 20rpx 10rpx 20rpx;
-  background: linear-gradient(-150deg, transparent 20rpx, rgb(211, 248, 3) 0);
-  position: relative;
-  box-shadow: -5rpx 5rpx 8rpx #999;
-  -webkit-transform-origin: 0 0;
-  margin: 20rpx auto;
-  font-size: 24rpx;
-  -webkit-transition: all 0.2s ease-out;
+.msgItemWrap .msgItemOuter {
+    display: block;
+    width: 100rpx;
+    min-height: 100rpx;
+    margin: 20rpx auto;
+    padding: 30rpx 20rpx 10rpx 20rpx;
+    position: relative;
+    box-shadow: -5rpx 5rpx 8rpx #666;
+    -webkit-transform-origin: 50% 0;
+    margin: 20rpx auto;
+    font-size: 24rpx;
+    -webkit-transition: all 0.5s ease-out;
+    text-align: left
 }
 
-.msgItemWrap text:before {
-  content: '';
-  position: absolute;
-  top: -25rpx;
-  right: 50%;
-  width: 30rpx;
-  height: 50rpx;
-  background: rgba(28, 120, 240, 0.5);
-  transform: rotate(10deg);
+.msgItemWrap .msgItemOuter image {
+    width: 40rpx;
+    height: 40rpx;
+    display: inline-block
+}
+.msgItemWrap .msgItemOuter view {
+    border-bottom: dotted 1px #999
 }
 
-.msgItemWrap text:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: linear-gradient(to left bottom, transparent 50%, rgba(0, 0, 0, 0.2) 0, rgba(0, 0, 0, 0.4)) 100% 0 no-repeat;
-  width: 20rpx;
-  height: 45rpx;
-  transform: translate(2rpx, -20rpx) rotate(-37deg);
-  transform-origin: bottom right;
-  border-bottom-left-radius: inherit;
-  box-shadow: -.2em 0.2em 0.3em -.1em rgba(0, 0, 0, 0.2);
+.msgItemWrap .msgItemOuter.color1 {
+    background: linear-gradient(-150deg, transparent 20rpx, rgb(144, 153, 233) 0, rgb(81, 78, 230) 70%);
+}
+.msgItemWrap .msgItemOuter.color1::before{
+    background: rgba(241, 62, 62, 0.5);
+    transform: rotate(-7deg);
+}
+
+.msgItemWrap .msgItemOuter.color2 {
+    background: linear-gradient(-150deg, transparent 20rpx, rgb(211, 233, 144) 0, rgb(167, 223, 2) 70%);
+}
+.msgItemWrap .msgItemOuter.color2::before{
+    background: rgba(28, 120, 240, 0.5);
+    transform: rotate(10deg);
+}
+
+.msgItemWrap .msgItemOuter.color3 {
+    background: linear-gradient(-150deg, transparent 20rpx, rgb(238, 125, 187) 0, rgb(255, 40, 159) 70%);
+}
+.msgItemWrap .msgItemOuter.color3::before{
+    background: rgba(26, 184, 86, 0.5);
+    transform: rotate(-10deg);
+}
+
+.msgItemWrap .msgItemOuter.color4 {
+    background: linear-gradient(-150deg, transparent 20rpx, rgb(139, 222, 247) 0, rgb(46, 191, 235) 70%);
+}
+.msgItemWrap .msgItemOuter.color4::before{
+    background: rgba(205, 226, 14, 0.5);
+    transform: rotate(6deg);
+}
+
+.msgItemWrap .msgItemOuter:before {
+    content: '';
+    position: absolute;
+    top: -25rpx;
+    right: 50%;
+    width: 30rpx;
+    height: 50rpx;
+    /* background: rgba(28, 120, 240, 0.5);
+    transform: rotate(10deg); */
+}
+
+.msgItemWrap .msgItemOuter:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: linear-gradient(to left bottom, transparent 50%, rgba(0, 0, 0, 0.2) 0, rgba(0, 0, 0, 0.4)) 100% 0 no-repeat;
+    width: 20rpx;
+    height: 45rpx;
+    transform: translate(2rpx, -20rpx) rotate(-37deg);
+    transform-origin: bottom right;
+    border-bottom-left-radius: inherit;
+    box-shadow: -.2em 0.2em 0.3em -.1em rgba(0, 0, 0, 0.2);
 }
