--- a/client/pages/about/about.wxml
+++ b/client/pages/about/about.wxml
@@ -1,3 +1,4 @@
 <view class="container-main aboutContainer {{activeTab!=='about'&&'hide'}}">
     关于我们
+    <navigator url="/pages/admin/admin">后台管理</navigator>
 </view>
