收藏功能界面完成

--- a/client/pages/like/like.wxml
+++ b/client/pages/like/like.wxml
@@ -1,5 +1,28 @@
 <view class="container-main likeContainer {{activeTab!=='like'&&'hide'}}">
-    <view>
-    
+  <scroll-view scroll-y enable-back-to-top class='likeListWrapper' lower-threshold='30' bindscrolltolower="renderLikeList">
+    <view wx:for="{{likeList}}" wx:key="{{item.goodId}}" class='likeListItem'>
+      <view class='imageWapper'>
+        <image src="{{item.mainImage}}" mode='widthFix'></image>
+      </view>
+      <view class='likeListWrapper_into'>
+        <view class='goodTitle'>
+          <i class="icon-product"></i>
+          <text>{{item.name}}</text>
+        </view>
+        <view class='goodsPrice'>
+          <text>价格：{{item.price}}</text>
+          <text>单位：{{item.unit}}</text>
+        </view>
+        <view class='goodsRemark'>
+          <i class="icon-remark"></i>
+          <text>{{item.remark}}</text>
+        </view>
+        <view class='remvelikeWrap' data-like-id="{{item.likeId}}" bindtap='removeLike'>
+          <i class="icon-delete"></i>
+        </view>
+      </view>
     </view>
+    <view class="emptyWrap"  wx:if="{{isLikeMore}}"><i class='icon-null'></i>已加载全部数据...</view>
+  </scroll-view>
+
 </view>
