--- a/client/pages/home/home.wxml
+++ b/client/pages/home/home.wxml
@@ -32,7 +32,7 @@
           <view class="goodsItem" wx:for="{{showGoodList}}" wx:key="id">
             <template is="goodsItem" data="{{...item}}" />
           </view>
-          <view class="emptyWrap"  wx:if="{{!isMore}}"><i class='icon-null'></i>已加载全部数据...</view>
+          <view class="emptyWrap" wx:if="{{!isMore}}"><i class='icon-null'></i>已加载全部数据...</view><view class="emptyWrap" wx:else>数据加载中...</view>
         </scroll-view>
       </view>
     </view>
